--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primaryColor">#f1f8fc</color>
     <color name="light_blue">#579fd3</color>
-    <color name="dark_blue">#426b6f</color>
+    <color name="dark_blue">#053040</color>
     <color name="gray">#a6a7ab</color>
+    <color name="light_gray">#f2f2f2</color>
 
 
 </resources>
